un peu plus de choses dans le README

--- a/README
+++ b/README
@@ -1,2 +1,20 @@
 Robot qui cherche les tweets en français qui parlent de digital.
 
+## Réponses 
+
+Pour le moment, ça répond :
+* "Numérique bordel !"
+* "Avé les doigts ?"
+* "Numérique rique rique..."
+* "Comme dans \"orgasme digital\" ?"
+* "Je préfère Numérique Hunter à Digital Capone"
+* "Numérique ta mère !"
+* "D'après l'Académie Française, tu parles de doigts. http://www.academie-francaise.fr/digital"
+* "Il n'ya que deux métiers dans le digital : proctologue et pianiste"
+Les suggestions sont les bienvenues !
+
+## L'usage officiel 
+
+Ce qu'en dit [l'Académie Française] (http://www.academie-francaise.fr/digital)
+
+> L'adjectif digital en français signifie « qui appartient aux doigts, se rapporte aux doigts ». Il vient du latin digitalis, « qui a l’épaisseur d’un doigt », lui-même dérivé de digitus, « doigt ». C’est parce que l’on comptait sur ses doigts que de ce nom latin a aussi été tiré, en anglais, digit, « chiffre », et digital, « qui utilise des nombres ». On se gardera bien de confondre ces deux adjectifs digital, qui appartiennent à des langues différentes et dont les sens ne se recouvrent pas : on se souviendra que le français a à sa disposition l’adjectif numérique.
