--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 
 Robot qui cherche les tweets en français qui parlent de digital.
 
+Le profil Twitter du bousin : https://twitter.com/liberezledoigt
+
 ## Réponses 
 
 Pour le moment, ça répond :
@@ -13,6 +15,7 @@ Pour le moment, ça répond :
 * "Numérique ta mère !"
 * "D'après l'Académie Française, tu parles de doigts. http://www.academie-francaise.fr/digital"
 * "Il n'ya que deux métiers dans le digital : proctologue et pianiste"
+
 Les suggestions sont les bienvenues !
 
 ## L'usage officiel 
